--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "jjxxmiin"
+url: "https://jjeamin.github.io"
 
 github:
   username: jjxxmiin # change to your github username
@@ -70,7 +70,7 @@ theme_mode: light # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn: 
+img_cdn: "https://jjeamin.github.io"
 
 # the avatar on sidebar, support local or CORS resources
 avatar: /assets/img/icon.png
