--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,6 @@ url: "https://jjxxmiin.github.io"
 github:
   username: jjxxmiin # change to your github username
 
-twitter:
-  username: jjxxmiin # change to your twitter username
-
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
@@ -38,7 +35,7 @@ social:
   email: common.jaemin@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/jjxxmiin # change to your twitter homepage
+    - https://instagram.com/jjxxmiin # change to your twitter homepage
     - https://github.com/jjxxmiin # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
