--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ social:
   email: common.jaemin@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
+    - https://opsoai.com # change to your twitter homepage
     - https://instagram.com/jjxxmiin # change to your twitter homepage
     - https://github.com/jjxxmiin # change to your github homepage
     # Uncomment below to add more social links
