--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,5 +1,9 @@
 #  The contact options.
 
+- type: website
+  icon: 'fa-regular fa-browser'
+  url: 'www.opsoai.com'
+
 - type: github
   icon: "fab fa-github"
 
