--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ theme_mode: light # [light|dark]
 img_cdn: "https://jjxxmiin.github.io"
 
 # the avatar on sidebar, support local or CORS resources
-avatar: /assets/img/icon.png
+avatar: /assets/img/face.png
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
