--- a/_config.yml
+++ b/_config.yml
@@ -41,11 +41,11 @@ social:
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
-
+    
 # Site Verification Settings
 webmaster_verifications:
   google: lhxQiy2vplw4RmXWDFj6urNmjVdWKYWIbiHdCUlGVzg # fill in your Google verification code
-  bing: # fill in your Bing verification code
+  bing: 9C97FED110BDDB86D67F63F37218C901 # fill in your Bing verification code
   alexa: # fill in your Alexa verification code
   yandex: # fill in your Yandex verification code
   baidu: # fill in your Baidu verification code
