Update jaemin -> opso

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -8,10 +8,10 @@
   icon: 'fa-solid fa-pen-nib'
   url: 'https://www.opsoai.com'
   
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
-  url: 'https://x.com/jeongjaemi74200'
-
+- type: website
+  icon: 'fa-solid fa-video'
+  url: 'https://vida.opsoai.com'
+  
 - type: threads
   icon: 'fa-brands fa-threads'
   url: 'https://www.threads.net/@opsoai'                   # Fill with your Threads profile link
