--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Jaemin Jeong # the main title
+title: OPSO # the main title
 
 tagline: DO OR DO NOT, THERE IS NO TRY # it will display as the sub-title
 
@@ -31,13 +31,11 @@ github:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Jaemin Jeong
+  name: OPSO
   email: common.jaemin@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://opsoai.com # change to your twitter homepage
-    - https://instagram.com/jjxxmiin # change to your twitter homepage
-    - https://github.com/jjxxmiin # change to your github homepage
+    - https://www.opsoai.com # change to your twitter homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -96,7 +94,7 @@ theme_mode: light # [light|dark]
 cdn: "https://jjxxmiin.github.io"
 
 # the avatar on sidebar, support local or CORS resources
-avatar: /assets/img/face.png
+avatar: /assets/img/logo.png
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
