--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ theme_mode: light # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-cdn: "https://jjxxmiin.github.io"
+cdn: "https://blog.opsoai.com"
 
 # the avatar on sidebar, support local or CORS resources
 avatar: /assets/img/logo.png
