--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ social:
   email: common.jaemin@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    # - https://www.opsoai.com # change to your twitter homepage
+     - https://www.opsoai.com # change to your twitter homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
