--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ webmaster_verifications:
 # Web Analytics Settings
 analytics:
   google:
-    id: G-SFJ1C1HGDZ # fill in your Google Analytics ID
+    id: G-J0PXH9M0N1 # fill in your Google Analytics ID
   goatcounter:
     id: # fill in your GoatCounter ID
   umami:
