--- a/_config.yml
+++ b/_config.yml
@@ -102,6 +102,9 @@ social_preview_image: # string, local or CORS resources
 # boolean type, the global switch for TOC in posts.
 toc: true
 
+math: true
+mermaid: true
+
 comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
   provider: utterances # [disqus | utterances | giscus]
