--- a/.github/workflows/daily_paper.yml
+++ b/.github/workflows/daily_paper.yml
@@ -36,6 +36,6 @@ jobs:
         run: |
           git config --global user.name 'OPSOAI Bot'
           git config --global user.email 'bot@opsoai.com'
-          git add _posts/
+          git add _posts/ assets/
           git commit -m "Auto-generated blog post for $(date +'%Y-%m-%d')" || echo "No changes to commit"
           git push
