--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -13,7 +13,7 @@ on:
   workflow_dispatch:
 
   workflow_run:
-    workflows: ["Daily CV Paper Post"]
+    workflows: ["Daily CV Paper Post", "Daily AI Trend Post"]
     types:
       - completed
 
